--- a/multinodes/cluster.yml
+++ b/multinodes/cluster.yml
@@ -1,10 +1,13 @@
 # Mesos cluster configurations
 mesos_version: "0.20.1"
 
+docker_registry_mirrors:
+  - "192.168.59.103:5000"
+
 # The numbers of servers
 ##############################
 zk_n: 1          # hostname will be zk1, zk2, …
-master_n: 2      # hostname will be master1,master2,…
+master_n: 1      # hostname will be master1,master2,…
 slave_n: 2      # hostname will be slave1,slave2,…
 
 # Memory and Cpus setting(only for virtualbox)
@@ -13,7 +16,7 @@ zk_mem     : 256
 zk_cpus    : 1
 master_mem : 256
 master_cpus: 1
-slave_mem  : 1024
+slave_mem  : 3072
 slave_cpus : 2
 
 # private ip bases
